# FIAT_GUI_prototype

./: .gitignore  LICENSE  README.md  app.spec  environment.yml  pyproject.toml
FIAT_GUI/: __init__.py  app.py  callbacks.py  fiat_api.py  layout.py  server.py  utils.py
