[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "FIAT_GUI"
authors = [{name = "Tjalling de Jong", email = "tjalling.dejong@deltares.nl"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"FIAT_GUI/callbacks.py" = ["ARG001", "ANN001", "RUF015", "D103"]